# nomination_predictor

./: .gitignore  Makefile  README.md  pyproject.toml  test_model_loading.py
data/: make_dataset.py
docs/: mkdocs.yml
nomination_predictor/: __init__.py  career_history_calculator.py  config.py  confirmations_scraper.py  congress_api.py  congress_api_utils.py  congress_party_utils.py  create_sample_set_of_pdfs.py  dataset.py  emergencies_scraper.py  entity_matching.py  feature_engineering_helpers.py  features.py  fjc_data.py  fjc_processor.py  fuzzy_matching.py  gemini_canvas.py  latestaction_parser.py  name_matching.py  nomination_description_parser.py  plots.py  process_vacancies_via_google.py  time_aware_analysis.py  vacancy_scraper.py  web_utils.py  webapp.py
notebooks/: 0.01-nw-data-source-1.ipynb  0.02-nw-data-source-1.ipynb  0.03-nw-congress-api-source-exploration.ipynb  0.04-nw-data-fetching.ipynb  0.04-nw-fjc-centric-pipeline-exploration.ipynb  1.00-nw-feature-engineering.ipynb  2.00-nw-eda-and-visualizations.ipynb  3.00-nw-model-selection-training-and-evaluation.ipynb  fetch_nominees.py
references/: Notes about FJC export and terminology.md  data_dictionary.md  design_planning.md  detail_example_from_congress_gov_api.csv  first ever congress api successful nominations retrieval backup.csv  nominations_example_response_excerpt.json
scripts/: fjc_data_processor.py  run_fjc_processor.py
tests/: test_confirmations_scraper.py  test_dataset.py  test_emergencies_footer_rows.py  test_emergencies_scraper.py  test_features.py  test_fjc_data.py  test_web_utils.py  (+7 more)
(+14 files in other folders)
