[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nomination_predictor"
version = "0.0.1"
description = "A project created for presentation at the end of 4geeks' Data Science and Machine Learning cohort Miami-ds-10"
authors = [
  { name = "Nicolas Winocur" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pandas-stubs",
    "pip",
    "pytest",
    "pytest-cov",
    "python-dotenv",
    "rapidfuzz",
    "ruff",
    "scikit-learn",
    "seaborn",
    "tqdm",
    "types-tqdm",
    "typer",
    "tenacity",
]
requires-python = "==3.13.5"
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "isort",
    "mypy",
    "jupyter",
    "ipykernel",
]

[tool.ruff]
line-length = 99
src = ["nomination_predictor"]
include = ["pyproject.toml", "nomination_predictor/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["nomination_predictor"]
force-sort-within-sections = true

[tool.flit.module]
name = "nomination_predictor"